--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,13 +1,23 @@
 .login-page-container {
     display: flex;
     background-color: #F0F2F5;
-    min-height: 100vh;
-    justify-content: space-evenly;
+    min-height: 600px;
+    justify-content: center;
+    gap: 100px;
+    align-items: center;
+    padding: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+h1, h2 {
+    margin: 0;
+    padding: 0;
+}
+
 .title-info {
-    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    width: 500px;
 }
 
 .login-form-container {
@@ -18,7 +28,6 @@
     height: fit-content;
     width: auto;
     border-radius: 10px;
-    margin-top: 100px;
     text-align: center;
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
@@ -88,4 +97,14 @@
     font-size: 18px;
     margin-bottom: 10px;
     width: auto;
+}
+
+.facebook-title {
+    color:#1877F2;
+    font-size: 55px;
+}
+
+.facebook-description {
+    font-weight: 400;
+    font-size: 25px;
 }
