--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -5,7 +5,7 @@
     justify-content: center;
     gap: 100px;
     align-items: center;
-    padding: 20px;
+    padding: 40px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -30,7 +30,7 @@ h1, h2 {
     border-radius: 10px;
     text-align: center;
     align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .login-form-container > div {
@@ -80,6 +80,10 @@ h1, h2 {
     cursor: pointer;
 }
 
+.create-account-button:hover {
+    background-color: #45AA31;
+}
+
 .forgot-password {
     color:#1877F2;
     font-size: 15px;
@@ -107,4 +111,19 @@ h1, h2 {
 .facebook-description {
     font-weight: 400;
     font-size: 25px;
+}
+
+@media (max-width: 950px) {
+    .login-page-container {
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .title-info {
+        text-align: center;
+    }
+
+    .facebook-description {
+        padding: 20px;
+    }
 }
