--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -7,6 +7,12 @@
     align-items: center;
     padding: 40px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position: relative;
+    z-index: 1;
+}
+
+.login-page-container.overlay {
+    opacity: 30%;
 }
 
 h1, h2 {
@@ -112,6 +118,7 @@ h1, h2 {
     font-weight: 400;
     font-size: 25px;
 }
+
 
 @media (max-width: 950px) {
     .login-page-container {
