--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,11 +5,23 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .logo-small {
     height: 40px;
     margin-left: 15px;
+}
+
+.left-info {
+    display: flex;
+    align-items: center;
+}
+
+.right-info {
+    display: flex;
+    gap: 8px;
+    padding-right: 15px;
 }
 
 .search-box {
@@ -27,4 +39,29 @@
     background-size: 25px;
     background-color: #F0F2F5;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.header-button {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E4E6EB;
+    border: none;
+}
+
+.header-button > object {
+    height: 24px;
+    color: black;
+}
+
+.header-button > img {
+    height: 40px;
+    border-radius: 50%;
+}
+
+.header-button:hover {
+    cursor: pointer;
 }
