--- a/src/styles/statuscreator.css
+++ b/src/styles/statuscreator.css
@@ -28,7 +28,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 7px;
+    padding: 10px;
+    height: 30px;
+    margin-top: 5px;
 }
 
 .bottom-options > ul > li {
@@ -53,11 +55,12 @@
 
 .status-creator-container {
     background-color: white;
-    width: 500px;
+    width: 100%;
     height: fit-content;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
+    padding: 10px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
