--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: sticky;
+    position: fixed;
     top: 0;
 }
 
