lower opacity for home page overlay

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -6,6 +6,10 @@
     margin-top: 55px;
 }
 
+.home-page.overlay {
+    opacity: 25%;
+}
+
 .timeline {
     display: flex;
     flex-direction: column;
