--- a/src/styles/createpost.css
+++ b/src/styles/createpost.css
@@ -31,10 +31,14 @@
 .create-post-header > img {
     top: 10px;
     right: 15px;
-    background-color: #DADDE1;
+    background-color: #F0F2F5;
     border-radius: 50%;
     padding: 2px;
     height: 30px;
+}
+
+.create-post-header > img:hover {
+    background-color:#DADDE1;
 }
 
 .create-post-data {
@@ -89,4 +93,9 @@
     background-color: #1B74E4;
     color: white;
     margin-top: 10px;
+}
+
+.post-button:hover {
+    cursor: pointer;
+    background-color: #1969D2;
 }
