style chat button and notifications button in header

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -68,3 +68,8 @@
 .header-button:hover {
     cursor: pointer;
 }
+
+.header-button[name="chat-button"] > img, .header-button[name="notification-button"] > img {
+    height: 25px;
+    border-radius: 0;
+}
