--- a/src/styles/sidebars.css
+++ b/src/styles/sidebars.css
@@ -29,7 +29,7 @@ h4 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.sidenav-container > ul > li, .shortcuts > ul > li, .birthday-data {
+.sidenav-item, .shortcuts > ul > li, .birthday-data {
     display: flex;
     align-items: center;
     padding: 10px;
@@ -42,7 +42,7 @@ h4 {
     font-size: 15px;
 }
 
-.sidenav-container > ul > li:hover, .shortcuts > ul > li:hover, .birthday-data:hover {
+.sidenav-item:hover, .shortcuts > ul > li:hover, .birthday-data:hover {
     cursor: pointer;
     background-color: #E4E6EB;
 }
