--- a/src/styles/status.css
+++ b/src/styles/status.css
@@ -9,6 +9,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 10px;
     gap: 5px;
+    box-sizing: border-box;
 }
 
 .status-container > div:nth-child(1) {
