--- a/src/styles/statuscreator.css
+++ b/src/styles/statuscreator.css
@@ -61,6 +61,7 @@
     flex-direction: column;
     border-radius: 10px;
     padding: 10px;
+    box-sizing: border-box;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
