--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -1,12 +1,13 @@
 .intro-container {
     background-color: white;
-    width: 490px;
+    width: 100%;
     height: fit-content;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     padding: 15px;
     gap: 10px;
+    box-sizing: border-box;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
