add width of 490 to profile left sidebar after making children width 100% & add flex to profile timeline

--- a/src/styles/profilecontent.css
+++ b/src/styles/profilecontent.css
@@ -17,8 +17,12 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    width: 490px;
 }
 
 .profile-timeline {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
