--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -43,3 +43,14 @@ a {
     text-decoration: none;
     color: black;
 }
+
+.see-all-button {
+    color: #1877F2;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+.see-all-button:hover {
+    cursor: pointer;
+    background-color: #F0F2F5;
+}
