add hover effect to profile nav tabs and active tab styling

--- a/src/styles/profileheader.css
+++ b/src/styles/profileheader.css
@@ -52,13 +52,40 @@
 
 .profile-navigation > ul {
     display: flex;
-    gap: 50px;
     list-style-type: none;
+    height: 40px;
+}
+
+.profile-navigation > ul > li {
+    padding-left: 16px;
+    padding-right: 16px;
+    display: flex;
+    align-items: center;
 }
 
 .profile-navigation {
     width: 82%;
     margin-top: 20px;
     border-top: 1px solid #DADDE1;
-    padding: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    align-items: center;
+}
+
+.profile-nav:hover {
+    cursor: pointer;
+    background-color: #F0F2F5;
+    border-radius: 8px;
+}
+
+.profile-nav.active {
+    color: #1969D2;
+    font-weight: 600;
+    border-bottom: 3px solid #1969D2;
+}
+
+.profile-nav.active:hover {
+    background-color: white;
+    border-bottom: 3px solid #1969D2;
+    border-radius: 0;
 }
