--- a/src/styles/profileheader.css
+++ b/src/styles/profileheader.css
@@ -56,11 +56,12 @@
     height: 40px;
 }
 
-.profile-navigation > ul > li {
+.profile-nav {
     padding-left: 16px;
     padding-right: 16px;
     display: flex;
     align-items: center;
+    text-transform: capitalize;
 }
 
 .profile-navigation {
