--- a/src/styles/createpost.css
+++ b/src/styles/createpost.css
@@ -8,7 +8,6 @@
     margin: auto;
     z-index: 2;
     flex-direction: column;
-    justify-content: space-between;
     width: 480px;
     height: 398px;
     padding: 15px;
@@ -17,6 +16,13 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 8px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.create-post-container > form {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
 }
 
 .create-post-title {
