--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -54,3 +54,13 @@ a {
     cursor: pointer;
     background-color: #F0F2F5;
 }
+
+.no-content-message {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
