--- a/src/styles/profilecontent.css
+++ b/src/styles/profilecontent.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    width: 490px;
+    min-width: 490px;
 }
 
 .profile-timeline {
