--- a/src/styles/friendrequests.css
+++ b/src/styles/friendrequests.css
@@ -44,6 +44,9 @@
     color: white;
     border: none;
     border-radius: 8px;
+    width: 100%;
+    font-weight: 600;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .confirm-button:hover {
@@ -53,12 +56,15 @@
 
 .delete-button {
     padding: 10px;
-    background-color: #F0F2F5;
+    background-color: #DADDE1;
     border: none;
     border-radius: 8px;
+    width: 100%;
+    font-weight: 600;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .delete-button:hover {
     cursor: pointer;
-    background-color: #e4e8ed;
+    background-color: #cfd3d8
 }
