--- a/src/styles/profileheader.css
+++ b/src/styles/profileheader.css
@@ -1,23 +1,24 @@
 .profile-header-container {
     height: 666px;
-    width: 100vw;
+    width: 100%;
     background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .profile-cover {
     width: 89%;
-    height: 500px;
+    height: 510px;
     background-color: #F0F2F5;
     border-radius: 8px;
 }
 
 .profile-header-middle-section {
     display: flex;
-    width: 89%;
+    width: 100%;
     justify-content: space-between;
 }
 
@@ -38,14 +39,12 @@
 .profile-header-left-data {
     display: flex;
     margin-top: -20px;
-    padding-left: 30px;
     gap: 30px;
 }
 
 .profile-actions {
     align-self: center;
     margin-top: 30px;
-    padding-right: 30px;
     display: flex;
     gap: 10px;
 }
@@ -65,7 +64,7 @@
 }
 
 .profile-navigation {
-    width: 82%;
+    width: 100%;
     margin-top: 20px;
     border-top: 1px solid #DADDE1;
     padding-top: 10px;
@@ -89,4 +88,26 @@
     background-color: white;
     border-bottom: 3px solid #1969D2;
     border-radius: 0;
+}
+
+.friend-request-container.profile {
+    padding: 20px;
+    background-color: #F0F2F5;
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 10px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.friend-request-container-options {
+    display: flex;
+    width: 261px;
+    gap: 10px;
+}
+
+.profile-header-data {
+    width: 86%;
 }
