--- a/src/styles/status.css
+++ b/src/styles/status.css
@@ -86,3 +86,20 @@
     gap: 5px;
     padding: 5px;
 }
+
+h5 {
+    padding: 0;
+    margin: 0;
+}
+
+.view-more-comments {
+    padding-left: 5px;
+    padding-bottom: 10px;
+    color: #777;
+    font-weight: 600;
+}
+
+.view-more-comments:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
