--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -11,6 +11,17 @@ body {
     margin-top: 20px;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: #F0F2F5;
+    opacity: 70%;
+}
+
 .like-button > button, .comment-button > button, .share-button > button {
     display: flex;
     align-items: center;
