allow user to scroll inside post modal without displaying scrollbar

--- a/src/styles/status.css
+++ b/src/styles/status.css
@@ -12,6 +12,16 @@
     box-sizing: border-box;
 }
 
+.status-container.postModal {
+    box-shadow: none;
+    overflow: auto;
+    height: 100%;
+}
+
+.status-container.postModal::-webkit-scrollbar {
+    display: none;
+}
+
 .status-container > div:nth-child(1) {
     display: flex;
     padding: 5px;
