--- a/src/styles/createpost.css
+++ b/src/styles/createpost.css
@@ -18,11 +18,31 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.create-post-container.has-media {
+    height: 746px;
+}
+
+.create-post-container.has-media > form > textarea {
+    font-size: 15px;
+}
+
 .create-post-container > form {
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-content: space-between;
+    overflow: auto;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: #F6F7F8;
+}
+
+::webkit-scrollbar-thumb {
+    background-color: #b2b2b2;
+    border-radius: 4px;
 }
 
 .create-post-title {
@@ -104,4 +124,18 @@
 .post-button:hover {
     cursor: pointer;
     background-color: #1969D2;
+}
+
+.media {
+    width: 90%;
+    height: fit-content;
+    border-radius: 8px;
+    margin: auto;
+    margin-bottom: 25px;
+}
+
+.media > img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
 }
