--- a/src/styles/status.css
+++ b/src/styles/status.css
@@ -113,3 +113,15 @@ h5 {
     cursor: pointer;
     text-decoration: underline;
 }
+
+.media-content {
+    height: auto;
+    width: 100%;
+    margin: auto;
+    margin-top: 5px;
+}
+
+.media-content > img {
+    width: 100%;
+    height: 100%;
+}
