--- a/src/styles/sidebars.css
+++ b/src/styles/sidebars.css
@@ -49,8 +49,10 @@ h4 {
 
 .sidenav-icons {
     height: 35px;
+    width: 35px;
     border-radius: 50%;
     margin-right: 10px;
+    object-fit: cover;
 }
 
 .shortcut-icons, .birthday-icon {
