--- a/src/styles/profileheader.css
+++ b/src/styles/profileheader.css
@@ -14,6 +14,8 @@
     height: 510px;
     background-color: #F0F2F5;
     border-radius: 8px;
+    position: relative;
+    overflow: hidden;
 }
 
 .profile-header-middle-section {
@@ -28,6 +30,7 @@
     border-radius: 50%;
     border: 4px solid white;
     object-fit: cover;
+    z-index: 1;
 }
 
 .profile-data {
@@ -121,6 +124,7 @@
     width: 40px;
     padding: 5px;
     background-color: #F0F2F5;
+    z-index: 1;
 }
 
 .add-profile-pic:hover {
@@ -131,4 +135,30 @@
 .add-profile-pic-icon {
     height: 100%;
     width: 100%;
+}
+
+.cover-photo-edit {
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    background-color: rgba(0, 0, 0, 0.5); 
+    border: none;
+    font-weight: 500;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.cover-photo-edit:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.cover-photo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
